kubernetes-manifests/sandbox/date.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: date
spec:
  selector:
    matchLabels:
      app: date
  template:
    metadata:
      labels:
        app: date
    spec:
      containers:
        - name: date
          image: alpine
          command:
            - /bin/sh
            - -c
            - |
              while true; do
                echo "Current date: $(date)"
                sleep 30;
              done
