kubernetes-manifests/sandbox/shpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shpod
spec:
  serviceAccountName: shpod
  containers:
  - name: shpod
    image: jpetazzo/shpod
    stdin: true
    tty: true
