kubernetes-manifests/sandbox/homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.59
  selector:
    app: homer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
